# ai-chatbot

./: .gitignore  README.md  alembic.ini  pyproject.toml
app/: crud.py  database.py  main.py  models.py  schemas.py
app/ai/: groq_client.py
app/api/v1/: __init__.py  auth.py  chat.py  chatbot.py  conversation.py  knowledge_base.py  message.py
app/core/: config.py  security.py
app/database/: __init__.py  session.py
app/database/migrations/: env.py
app/database/migrations/versions/: bf2a5d9f6f36_initial_schema.py  bf42c17af2e3_add_chatbot_owner.py
app/llm/: llm_service.py
app/models/: __init__.py  chatbot.py  conversation.py  knowledge_base.py  message.py  user.py
app/repositories/: chat_repository.py  chatbot_repository.py  conversation_repository.py  knowledge_base_repository.py  message_repository.py  user_repository.py
app/schemas/: __init__.py  chat.py  chatbot.py  conversation.py  knowledge_base.py  message.py  user.py
app/services/: auth_service.py  chat_service.py  chatbot_service.py  conversation_service.py  knowledge_base_service.py  llm_service.py  message_service.py  user_service.py
models/: chatbot.py  knowledge_base.py
schemas/: knowledge_base.py
