[project]
name = "ai-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "bcrypt==4.0.1",
    "fastapi[standard]>=0.136.3",
    "groq>=1.5.0",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "orjson>=3.11.9",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.1",
    "pytest>=9.1.1",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.32",
    "sqlalchemy>=2.0.50",
]
